Fixed PrimeReact checkboxes on profile overflowing into the navbar

--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -105,6 +105,10 @@
   justify-content: space-between;
 }
 
+/* Prime React checkboxes */
+.p-checkbox {
+  position:initial!important;
+}
 
 #menu-tab-item {
   text-decoration: none;
